fix play button z-index

--- a/catalogue/e/style.css
+++ b/catalogue/e/style.css
@@ -306,7 +306,7 @@ h2 {
   right: 0;
   padding: 30px;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
 }
 
 .btn.btn-play {
